[gd_scene load_steps=7 format=2]

[ext_resource path="res://menu/screentitle.png" type="Texture" id=1]
[ext_resource path="res://menu/creditsbutton.png" type="Texture" id=2]
[ext_resource path="res://menu/menu.gd" type="Script" id=3]
[ext_resource path="res://menu/playbutton.png" type="Texture" id=4]
[ext_resource path="res://menu/quitbutton.png" type="Texture" id=5]
[ext_resource path="res://menu/disclaimerbutton.png" type="Texture" id=6]

[node name="menu" type="Node2D"]
script = ExtResource( 3 )

[node name="screentitle" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 1 )

[node name="play" type="Button" parent="screentitle"]
margin_left = -143.0
margin_top = -265.0
margin_right = 146.0
margin_bottom = -144.0
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="disclaimer" type="Button" parent="screentitle"]
margin_left = -144.0
margin_top = -127.0
margin_right = 145.0
margin_bottom = -6.0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits" type="Button" parent="screentitle"]
margin_left = -144.0
margin_top = 13.0
margin_right = 145.0
margin_bottom = 134.0
icon = ExtResource( 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="screentitle"]
margin_left = -144.0
margin_top = 151.0
margin_right = 145.0
margin_bottom = 272.0
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="screentitle/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="screentitle/disclaimer" to="." method="_on_disclaimer_pressed"]
[connection signal="pressed" from="screentitle/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="screentitle/quit" to="." method="_on_quit_pressed"]
